2012-12-15 Simon Flöry <simon.floery@rechenraum.com>
	* fixed integer parsing rule in flex parser (thanks to John Williams, fixes
		sf.net #74)
	* working around bug with window resizing, I assume this was GTK's fault
		(general_functions.c, set_window_size_minimal)
	* removed deprecated calls to set color on color buttons
	* fixed decimal separator on keypad (thanks to cyberpatrol and qwertypoke,
		fixes sf.net #86)
	* config file stored according to XDG spec (thanks to Eric Heintzmann, fixes
		sf.net #88)

2012-11-08 Simon Flöry <simon.floery@rechenraum.com>
	* applied patch to update spec file for RPM (thanks to Dwigth Engen)

##############################################
# 2009-10-15 galculator 2.0 released       #
##############################################

2012-10-13 Simon Flöry <simon.floery@rechenraum.com>
	* fixed bug in display_result_backspace in display.c (thanks to tjbp)
	* moved call to remember_display_values from ui_classic_view_create
		to main, to restore remember display value functionality
	* Improved pasting of numbers in scientific notation (e.g. 1e-4, 
		thanks to stevefranks for reporting)

2012-09-24 Simon Flöry <simon.floery@rechenraum.com>
	* removed gtk_key_snooper_install for GTK3
	* made factorial more robust (thanks to Nick Warne)
	* GALCULATOR_CONFIG environment variable may be used to set a user
		defined location of the configuration file (thanks to Richard Gill)
	* adding -lm (thanks to Tomas Mraz and Alexandre Rostovtsev)

2012-09-21 Simon Flöry <simon.floery@rechenraum.com>
	* making --enable-gtk3 default for configure
	* replaced three deprecated GTK calls

2012-09-19 Simon Flöry <simon.floery@rechenraum.com>
	* added zh_CN, da_DK, kk_KZ and sv locale (thanks to Athurg Gooth, Joakim  Seeberg, Baurzhan Muftakhidinov and Daniel Nylander)
	* added plenty of GTK_WIDGET macro casts to get rid of some compilation warnings

2012-09-18 pcmanx
	* removed libglade dependancies
	* Correct installation paths of icons